# sumcheck-rs

./: Cargo.toml  README.md
src/: lib.rs  polynomial.rs  prover.rs  term.rs  tests.rs  utils.rs  verifier.rs
