[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sumcheck"
path = "src/lib.rs" # lib.rs 
doctest = false

[dependencies]
rand = "0.8"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
ark-std = "0.4.0"

[dev-dependencies]
ark-test-curves = "0.4.0"