[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sumcheck"
path = "src/lib.rs" # lib.rs 
doctest = false

[dependencies]
rand = "0.8"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-std = "0.5.0"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
num-bigint = "0.4"
bincode = "1.3"
hex = "0.4"

[dev-dependencies]
ark-test-curves = "0.5.0"